# rauncher-mc

./: AGENTS.md  Cargo.toml  LICENSE
crates/rc-auth/: Cargo.toml
crates/rc-auth/src/: client.rs  config.rs  crypto.rs  errors.rs  file_store.rs  key_manager.rs  lib.rs  models.rs  secret.rs  session.rs  store.rs
crates/rc-core/: Cargo.toml
crates/rc-core/src/: lib.rs
crates/rc-instance/: Cargo.toml
crates/rc-instance/src/: config.rs  instance.rs  lib.rs  manager.rs
crates/rc-instance/src/minecraft/: mod.rs  version_manifest.rs
crates/rc-meta/: Cargo.toml
src/: main.rs
src/components/instance/: grid.rs  mod.rs  status.rs  view.rs
