[package]
name = "rauncher-mc"
version = "0.1.0"
keywords = ["minecraft", "launcher", "game", "mc"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["LuizSSampaio"]
repository = "https://github.com/LuizSSampaio/rauncher-mc"
categories = ["games"]

[workspace]
members = ["crates/rc-core", "crates/rc-instance"]

[workspace.dependencies]
anyhow = "1.0.100"
serde = "1.0.228"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.3.1"
anyhow.workspace = true
