[package]
name = "rc-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json"] }
oauth2 = "5.0.0"
