[package]
name = "rc-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
directories.workspace = true
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json"] }
url = "2.5.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
argon2 = "0.5"
keyring = { version = "3.6", optional = true }
fs2 = "0.4"
base64 = "0.22"
getrandom = "0.3.4"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3.14"
tokio-test = "0.4"

[features]
default = ["keyring-support"]
keyring-support = ["keyring"]
