[package]
name = "rc-instance"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
tokio.workspace = true
toml = "0.9.8"
directories = "6.0.0"

[dev-dependencies]
tempfile = "3.12.0"
