[package]
name = "rc-instance"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
directories.workspace = true
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.12.0"
